--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,14 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-pdo_mysql": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "*",
         "laravel/framework": "^10.10",
@@ -29,7 +33,8 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        },"files" : [
+        },
+        "files": [
             "app/Helpers/helper.php"
         ]
     },
