--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ext-pdo_mysql": "*",
+        "barryvdh/laravel-dompdf": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "*",
         "laravel/framework": "^10.10",
